--- a/views/header.html
+++ b/views/header.html
@@ -1,4 +1,4 @@
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="/static/front/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="/static/css/font.css">
 <link rel="stylesheet" href="/static/css/xadmin.css">
 
