--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
                 {{/*<a href="https://www.layui.com/doc/">文档</a>*/}}
             </li>
             <li class="layui-nav-item ">
-                <a href="/sys_user/login_form" target="_blank">演示 <span class="layui-badge-dot"></span></a>
+                <a href="/sys_user/login_form" target="_blank">演示 <!--<span class="layui-badge-dot"></span> --></a>
             </li>
 
 
