--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN"><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>layui - 经典模块化前端 UI 框架</title>
-    <meta name="keywords" content="layui,ui,ui框架,前端框架,JS组件">
-    <meta name="description" content="layui 是一款采用自身模块规范编写的前端 UI 框架，遵循原生 HTML/CSS/JS 的书写与组织形式，门槛极低，拿来即用。其外在极简，却又不失饱满的内在，体积轻盈，组件丰盈，从核心代码到 API 的每一处细节都经过精心雕琢，非常适合界面的快速开发。">
+    <title>GOFOX - 通用后台管理系统</title>
+    <meta name="keywords" content="golang,go,cms框架,gofox">
+    <meta name="description" content="GOFOX通用后台管理系统">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
